--- a/assets/styles/stands.css
+++ b/assets/styles/stands.css
@@ -173,7 +173,7 @@
 }
 
 
-#slider {
+.slider {
 	margin: 0 auto;
 	width: 800px;
 	max-width: 100%;
@@ -181,57 +181,57 @@
     margin-top: -60px;
 }
 
-#slider input[type=radio] {
+.slider input[type=radio] {
 	display: none;
 }
 
-#slider label {
+.slider label {
 	cursor: pointer;
 	text-decoration: none;
 }
 
-#slides {
+.slides {
 	border-radius: 10px;
 	padding: 8px;
 	position: relative;
 	z-index: 1;
 }
 
-#overflow {
+.overflow {
 	width: 100%;
 	overflow: hidden;
 }
 
-#slide1:checked ~ #slides .inner {
+.slide1:checked ~ .slides .inner {
 	margin-left: 0;
 }
-#slide2:checked ~ #slides .inner {
+.slide2:checked ~ .slides .inner {
 	margin-left: -100%;
 }
-#slide3:checked ~ #slides .inner {
+.slide3:checked ~ .slides .inner {
 	margin-left: -200%;
 }
 
-#slide4:checked ~ #slides .inner {
+.slide4:checked ~ .slides .inner {
 	margin-left: -300%;
 }
 
-#slide5:checked ~ #slides .inner {
+.slide5:checked ~ .slides .inner {
 	margin-left: -400%;
 }
 
-#slides .inner {
+.slides .inner {
 	-webkit-transform: translateZ(0);
 	transition: margin-left 800ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
 }
 
-#slides .inner {
+.slides .inner {
 	width: 500%;
 	line-height: 0;
 	height: 240px;
 }
 
-#slides .slide {
+.slides .slide {
 	width: 20%;
 	float: left;
 	display: block;
@@ -240,7 +240,7 @@
 }
 
 
-#controls {
+.controls {
 	margin: -130px 0 0 0;
 	width: 100%;
 	height: 50px;
@@ -248,45 +248,45 @@
 	position: relative;
 }
 
-#controls label {
+.controls label {
 	transition: opacity 0.2s ease-out;
 	display: none;
 	width: 50px;
 	height: 50px;
 	opacity: 0.4;
 }
-#controls label:hover {
+.controls label:hover {
 	opacity: 1;
 }
 
-#slide1:checked ~ #controls label:nth-child(2), 
-#slide2:checked ~ #controls label:nth-child(3), 
-#slide3:checked ~ #controls label:nth-child(4), 
-#slide4:checked ~ #controls label:nth-child(5), 
-#slide5:checked ~ #controls label:nth-child(1) {
+.slide1:checked ~ .controls label:nth-child(2), 
+.slide2:checked ~ .controls label:nth-child(3), 
+.slide3:checked ~ .controls label:nth-child(4), 
+.slide4:checked ~ .controls label:nth-child(5), 
+.slide5:checked ~ .controls label:nth-child(1) {
 	background: url(/assets/images/slider/next.png) no-repeat;
 	float: right;
 	margin: 0 -50px 0 0;
 	display: block;
 }
 
-#slide1:checked ~ #controls label:nth-child(5), 
-#slide2:checked ~ #controls label:nth-child(1), 
-#slide3:checked ~ #controls label:nth-child(2), 
-#slide4:checked ~ #controls label:nth-child(3), 
-#slide5:checked ~ #controls label:nth-child(4) {
+.slide1:checked ~ .controls label:nth-child(5), 
+.slide2:checked ~ .controls label:nth-child(1), 
+.slide3:checked ~ .controls label:nth-child(2), 
+.slide4:checked ~ .controls label:nth-child(3), 
+.slide5:checked ~ .controls label:nth-child(4) {
 	background: url(/assets/images/slider/prev.png) no-repeat;
 	float: left;
 	margin: 0 0 0 -50px;
 	display: block;
 }
 
-#bullets {
+.bullets {
 	margin: 100px 0 0;
 	text-align: center;
 }
 
-#bullets label {
+.bullets label {
 	border-radius: 5px;
 	display: inline-block;
 	width: 10px;
@@ -294,28 +294,28 @@
 	background: #bbb;
 }
 
-#slide1:checked ~ #bullets label:nth-child(1), 
-#slide2:checked ~ #bullets label:nth-child(2), 
-#slide3:checked ~ #bullets label:nth-child(3), 
-#slide4:checked ~ #bullets label:nth-child(4),
-#slide5:checked ~ #bullets label:nth-child(5) {
+.slide1:checked ~ .bullets label:nth-child(1), 
+.slide2:checked ~ .bullets label:nth-child(2), 
+.slide3:checked ~ .bullets label:nth-child(3), 
+.slide4:checked ~ .bullets label:nth-child(4),
+.slide5:checked ~ .bullets label:nth-child(5) {
 	background: #333;
 }
 /* responsive behaviour of controls */
 @media screen and (max-width: 900px) {
-	#slide1:checked ~ #controls label:nth-child(5), 
-	#slide2:checked ~ #controls label:nth-child(1), 
-	#slide3:checked ~ #controls label:nth-child(2), 
-	#slide4:checked ~ #controls label:nth-child(3), 
-	#slide5:checked ~ #controls label:nth-child(4) {
+	.slide1:checked ~ .controls label:nth-child(5), 
+	.slide2:checked ~ .controls label:nth-child(1), 
+	.slide3:checked ~ .controls label:nth-child(2), 
+	.slide4:checked ~ .controls label:nth-child(3), 
+	.slide5:checked ~ .controls label:nth-child(4) {
 		margin: 0;
 	}
 
-	#slide1:checked ~ #controls label:nth-child(2), 
-	#slide2:checked ~ #controls label:nth-child(3), 
-	#slide3:checked ~ #controls label:nth-child(4), 
-	#slide4:checked ~ #controls label:nth-child(5), 
-	#slide5:checked ~ #controls label:nth-child(1) {
+	.slide1:checked ~ .controls label:nth-child(2), 
+	.slide2:checked ~ .controls label:nth-child(3), 
+	.slide3:checked ~ .controls label:nth-child(4), 
+	.slide4:checked ~ .controls label:nth-child(5), 
+	.slide5:checked ~ .controls label:nth-child(1) {
 		margin: 0;
 	}
 }
