--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -6,7 +6,6 @@
 
     min-height: 1400px;
     height: 100%;
-
     margin-top: -70px;
 }
 
@@ -16,6 +15,7 @@
 
 .contetn__about_one
 {
+    
     margin-top: 150px;
     margin-bottom: 100px;
 }
@@ -83,9 +83,40 @@ to { -webkit-transform:rotate(360deg) } }
     font-size: 16px;
     font-weight: 500;
 
-    margin-top: 60px;
+    margin-top: 30px;
 }
 
+.our_clients
+{
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 30px;
+}
+
+.our_clients > p 
+{
+    width: auto;
+    height: 35px;
+    padding: 10px;
+    display: flex;
+    text-align: center;
+    align-items: center;
+
+    font-size: 14px;
+    font-weight: 400;
+    margin: 5px;
+    opacity: 1;
+}
+
+.our_clients > p:first-child
+{
+    border-radius: 8px 0 0 8px;
+}
+
+.our_clients > p:last-child
+{
+    border-radius: 0 8px 8px 0;
+}
 
 /* КОНТЕЙНЕР О КОМПАНИИ. ВТОРОЙ КОНТЕЙНЕР (ПРОБЛЕМЫ КОТОРЫЕ МЫ РЕШИМ) */
 
