--- a/assets/styles/stands.css
+++ b/assets/styles/stands.css
@@ -320,7 +320,7 @@
 .slide3:checked ~ .bullets label:nth-child(3), 
 .slide4:checked ~ .bullets label:nth-child(4),
 .slide5:checked ~ .bullets label:nth-child(5) {
-	background: #333;
+	background: #4AFF7D;
 }
 
 /* responsive behaviour of controls */
