--- a/assets/styles/stands.css
+++ b/assets/styles/stands.css
@@ -27,11 +27,30 @@
     margin-top: 20px;
 }
 
-.contetn__stands_one > img
+.contetn__stands_one > .img__stands_slid
 {
     width: 350px;
     height: 350px;
+    transform: scale(0.9);
+    background-image: url(/assets/imges/stand1.png);
+    animation: img_stands 10s infinite;
 }
+
+@keyframes img_stands {
+    0%{
+        background-image: url(/assets/imges/stand1.png);
+        opacity: 1;
+    }
+    30%{
+        background-image: url(/assets/imges/stand2.png);
+        opacity: 1;
+    }
+    60%{
+        background-image: url(/assets/imges/stand3.png);
+        opacity: 1;
+    }
+}
+
 
 .content__stands_shop
 {
