--- a/assets/styles/stands.css
+++ b/assets/styles/stands.css
@@ -141,6 +141,20 @@
     }
 }
 
+.img_5
+{
+    position: absolute;
+    top: 150px;
+    left: 1px;
+
+    opacity: 0.7;
+    transform: translateZ(-100px);
+    scale: 2;
+    width: 650px;
+    height: 400px;
+    z-index: -10;
+}
+
 .content__stands_shop
 {
     margin: 0 auto;
