--- a/assets/styles/color.css
+++ b/assets/styles/color.css
@@ -184,6 +184,14 @@ button
     transition: 0.2s;
 }
 
+button:hover
+{
+    background-color: var(--content-bg-color-dark);
+    color: var(--svg-logo-grin-darc);
+    box-shadow: inset 0 0 0 2px  var(--svg-logo-grin-darc);
+    transition: 0.2s;
+}
+
 .contetn__stands_one > div > p > a 
 {
     color: var(--svg-logo-grin-darc);
