--- a/assets/styles/stands.css
+++ b/assets/styles/stands.css
@@ -44,10 +44,9 @@
 .img_1
 {
     position: absolute;
-    top: 70px;
-    left: 15px;
-
-    animation: 1s rop ;
+    opacity: 0;
+    scale: 0.9;
+    animation: rop  1s 1s 1 forwards, roprop 4s 2s infinite;
 }
 
 @keyframes rop {
@@ -61,9 +60,53 @@
         opacity: 1;
     }
     100%{
+        left: 15px;
+        top: 70px;
+        opacity: 1;
+    }
+}
+
+@keyframes roprop {
+    0%{
+        top: 70px;
+        left: 15px;
+        opacity: 1;
+    }
+    5% 
+    {
         top: 70px;
         left: 15px;
     }
+    25%{
+        left: 250px;
+        top: 20px;
+    }
+    30%{
+        left: 250px;
+        top: 20px;
+    }
+    50%{
+        left: 250px;
+        top: 180px;
+    }
+    55%{
+        left: 250px;
+        top: 180px;
+    }
+    75%{
+        left: 15px;
+        top: 230px;
+    }
+    80%{
+        left: 15px;
+        top: 230px;
+    }
+    100%{
+        top: 70px;
+        left: 15px;
+        opacity: 1;
+    }
+
 }
 
 .img_2
@@ -71,8 +114,9 @@
     position: absolute;
     top: 10px;
     left: 180px;
-
-    animation: 1s rop1 ;
+    scale: 0.9;
+    animation: rop1  1s 1s 1 forwards, roprop1 4s 2s infinite;
+    opacity: 0;
 }
 
 @keyframes rop1 {
@@ -88,6 +132,49 @@
     100%{
         top: 10px;
         left: 180px;
+        opacity: 1;
+    }
+}
+
+@keyframes roprop1 {
+    0%{
+        top: 10px;
+        left: 180px;
+        opacity: 1;
+    }
+    5% 
+    {
+        top: 10px;
+        left: 180px;
+    }
+    25%{
+        left: 180px;
+        top: 160px;
+    }
+    30%{
+        left: 180px;
+        top: 160px;
+    }
+    50%{
+        left: -10px;
+        top: 200px;
+    }
+    55%{
+        left: -10px;
+        top: 200px;
+    }
+    75%{
+        left: -10px;
+        top: 40px;
+    }
+    80%{
+        left: -10px;
+        top: 40px;
+    }
+    100%{
+        top: 10px;
+        left: 180px;
+        opacity: 1;
     }
 }
 
@@ -96,8 +183,9 @@
     position: absolute;
     top: 200px;
     left: 35px;
-
-    animation: 1s rop2 ;
+    scale: 0.9;
+    animation: rop2  1s 1s 1 forwards, roprop2 4s 2s infinite;
+    opacity: 0;
 }
 
 @keyframes rop2 {
@@ -112,7 +200,50 @@
     }
     100%{
         top: 200px;
-        left: 35px;    
+        left: 35px;  
+        opacity: 1;  
+    }
+}
+
+@keyframes roprop2 {
+    0%{
+        top: 200px;
+        left: 35px; 
+        opacity: 1;
+    }
+    5% 
+    {
+        top: 200px;
+        left: 35px; 
+    }
+    25%{
+        left: 35px;
+        top: 30px;
+    }
+    30%{
+        left: 35px;
+        top: 30px;
+    }
+    50%{
+        left: 220px;
+        top: 1px;
+    }
+    55%{
+        left: 220px;
+        top: 1px;
+    }
+    75%{
+        left: 220px;
+        top: 160px;
+    }
+    80%{
+        left: 220px;
+        top: 160px;
+    }
+    100%{
+        top: 200px;
+        left: 35px; 
+        opacity: 1;
     }
 }
 
@@ -121,8 +252,9 @@
     position: absolute;
     left: 210px;
     top: 180px;
-
-    animation: 1s rop3 ;
+    scale: 0.9;
+    animation: rop3  1s 1s 1 forwards, roprop3 4s 2s infinite;
+    opacity: 0;
 }
 
 @keyframes rop3 {
@@ -138,6 +270,50 @@
     100%{
         left: 210px;
         top: 180px;
+        opacity: 1;
+    }
+}
+
+
+@keyframes roprop3 {
+    0%{
+        left: 210px;
+        top: 180px;
+        opacity: 1;
+    }
+    5% 
+    {
+        left: 210px;
+        top: 180px;
+    }
+    25%{
+        left: 35px;
+        top: 220px;
+    }
+    30%{
+        left: 35px;
+        top: 220px;
+    }
+    50%{
+        left: 35px;
+        top: 40px;
+    }
+    55%{
+        left: 35px;
+        top: 40px;
+    }
+    75%{
+        left: 220px;
+        top: 10px;
+    }
+    80%{
+        left: 220px;
+        top: 10px;
+    }
+    100%{
+        left: 210px;
+        top: 180px;
+        opacity: 1;
     }
 }
 
