--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -88,38 +88,6 @@ to { -webkit-transform:rotate(360deg) } }
     margin-top: 30px;
 }
 
-.our_clients
-{
-    display: flex;
-    flex-wrap: wrap;
-    margin-top: 30px;
-}
-
-.our_clients > img
-{
-    width: auto;
-    height: 45px;
-    padding: 10px;
-    display: flex;
-    text-align: center;
-    align-items: center;
-
-    font-size: 14px;
-    font-weight: 400;
-    margin: 5px;
-    opacity: 1;
-}
-
-.our_clients > img:first-child
-{
-    border-radius: 8px 0 0 8px;
-}
-
-.our_clients > img:last-child
-{
-    border-radius: 0 8px 8px 0;
-}
-
 /* КОНТЕЙНЕР О КОМПАНИИ. ВТОРОЙ КОНТЕЙНЕР (ПРОБЛЕМЫ КОТОРЫЕ МЫ РЕШИМ) */
 
 .contetn__about_two
@@ -188,7 +156,7 @@ to { -webkit-transform:rotate(360deg) } }
     display: flex;
     justify-content: space-between;
     align-items: center;
-
+    padding-bottom: 0;
     min-height: 150px;
     height: auto;
 }
@@ -209,6 +177,53 @@ to { -webkit-transform:rotate(360deg) } }
     font-weight: 500;
 }
 
+
+/*КОНТЕЙНЕР о сотрудничестве */
+
+.content_customers
+{
+    margin: 50px 0 50px 0;
+}
+
+.our_clients
+{
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 50px;
+    padding-bottom: 50px;
+
+}
+
+.our_clients > img
+{
+    width: auto;
+    height: 150px;
+    margin: 20px;
+    padding: 30px;
+    display: flex;
+    text-align: center;
+    align-items: center;
+
+    font-size: 14px;
+    font-weight: 400;
+    margin: 5px;
+    opacity: 1;
+}
+
+.our_clients > img:first-child
+{
+    border-radius: 8px 0 0 8px;
+}
+
+.our_clients > img:last-child
+{
+    border-radius: 0 8px 8px 0;
+}
+
+.content_partners
+{
+    margin: 50px 0 0 0;
+}
 
 
 /*КОНТЕЙНЕР КАКИЕ ПРОБЛЕМЫ МЫ РЕШАЕМ*/
@@ -279,65 +294,4 @@ to { -webkit-transform:rotate(360deg) } }
 {
     margin-top: 5px;
     font-size: 18px;
-}
-
-
-/*КОНТЕЙНЕР КОММЕНТАРИИ*/
-
-
-.container__comment
-{
-    min-height: 525px;
-    height: auto;
-}
-
-.coments__wrapper__advantages
-{
-    display: flex;
-
-    margin-top: 50px;
-    padding-bottom: 25px;
-
-    overflow: auto;
-}
-
-.coments__wrapper__advantages::-webkit-scrollbar
-{
-    width: 10px;
-}
-
-.coments__wrapper__advantages::-webkit-scrollbar-thumb
-{
-    border-radius: 20px;
-}
-
-.com_card
-{
-    min-width: 300px;
-    width: auto;
-    height: 200px;
-
-    padding: 25px;
-    border-radius: 25px;   
-}
-
-.coments__wrapper__advantages > div:not(:first-child)
-{
-    margin-left: 25px;
-}
-
-.coments__wrapper__advantages > div > h1
-{
-    font-size: 24px;
-}
-
-.coments__wrapper__advantages > div > p 
-{
-    margin-top: 20px;
-    font-size: 16px;
-}
-
-.container__comment > h1
-{
-    margin-top: 100px;
 }
