--- a/assets/styles/color.css
+++ b/assets/styles/color.css
@@ -47,6 +47,11 @@ input
     color: var(--text-color-dark);
 }
 
+pre
+{
+    color: var(--text-color-dark);
+}
+
 .btn_form_form
 {
     background-color: var(--svg-logo-grin-darc);
