--- a/assets/styles/stands.css
+++ b/assets/styles/stands.css
@@ -403,9 +403,11 @@
 .open__card_
 {
     width: 900px;
-    height: 450px;
+    min-height: 450px;
+    height: 100%;
     margin-left: 50px;
     border-radius: 20px ;
+    padding-bottom: 10px;
 }
 .text__open_st 
 {
@@ -419,11 +421,13 @@
 
 .text__st
 {
-    width: 420px;
+    width: 800px;
+    margin: 30px;  
 }
 
-.text__st > p 
+.text__st > pre 
 {
+    white-space: pre-wrap;
     font-size: 16px;
     font-weight: 300;
     margin-top: 30px;
@@ -452,22 +456,36 @@
 
 .about__stand_t
 {
+    width: 100%;
+    margin-top: auto;
+    padding-bottom: 40px;
     margin-left: 50px;
 }
 
 
 .open__card_btn-st
 {
+    display: flex;
     margin-top: 115px;
 }
 
 .open__card_btn-st > .btn_form_form
 {
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
     width: 200px;
+    height: 40px;
     padding: 12px;
     border-radius: 15px;
     font-size: 16px;
     font-weight: 500;
+}
+
+.open__card_btn-st > a
+{
+    margin-left: 10px;
 }
 
 
@@ -489,6 +507,7 @@
 }
 
 .slides {
+    width: 390px;
 	border-radius: 10px;
 	padding: 8px;
 	position: relative;
@@ -600,6 +619,7 @@
 }
 
 .bullets {
+    width: 390px;
 	margin: 100px 0 0;
 	text-align: center;
 }
