--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -29,12 +29,38 @@
     position:relative;
     width: 350px;
     height: 350px;
-    -webkit-animation-iteration-count:infinite;
-    -webkit-animation-timing-function:linear;
-    -webkit-animation-name:orbit;
-    -webkit-animation-duration: 0s;
+    -webkit-animation: spin1 100s infinite linear;
+    -moz-animation: spin1 100s infinite linear;
+    -o-animation: spin1 100s infinite linear;
+    -ms-animation: spin1 100s infinite linear;
+    animation: spin1 100s infinite linear;
+        -webkit-transform-origin: 50% 50%;
+        -moz-transform-origin: 50% 50%;
+        -o-transform-origin: 50% 50%;
+        transform-origin: 50% 50%;
     z-index: 0;
 }
+
+@-webkit-keyframes spin1 {
+    0% { -webkit-transform: rotate(0deg);}
+    100% { -webkit-transform: rotate(360deg);}
+    }
+    @-moz-keyframes spin1 {
+    0% { -moz-transform: rotate(0deg); }
+    100% { -moz-transform: rotate(360deg);}
+    }
+    @-o-keyframes spin1 {
+    0% { -o-transform: rotate(0deg);}
+    100% { -o-transform: rotate(360deg);}
+    }
+    @-ms-keyframes spin1 {
+    0% { -ms-transform: rotate(0deg);}
+    100% { -ms-transform: rotate(360deg);}
+    }
+    @-keyframes spin1 {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg);}
+    } 
 
 .sun > div
 {
