--- a/assets/styles/color.css
+++ b/assets/styles/color.css
@@ -145,3 +145,8 @@ span {
 .slide1:checked ~ .bullets label:nth-child(1), .slide2:checked ~ .bullets label:nth-child(2), .slide3:checked ~ .bullets label:nth-child(3), .slide4:checked ~ .bullets label:nth-child(4), .slide5:checked ~ .bullets label:nth-child(5) {
   background: var(--svg-logo-grin-darc);
 }
+
+.line
+{
+  background: var(--line-bg-gr);
+}
