--- a/assets/styles/services.css
+++ b/assets/styles/services.css
@@ -15,7 +15,6 @@
 }
 
 .container__about_services {
-  width: 1000px;
   margin-bottom: 50px;
   display: flex;
   justify-content: space-between;
@@ -45,27 +44,32 @@
   top: 50px;
 }
 
-.container__about_services > .img_services_bg {
-  width: 480px;
-  height: 400px;
-  background-image: url(../imges/BrowserConnection.png);
-  background-repeat: no-repeat;
-  background-position: center center;
-  transform-style: preserve-3d;
+.container__about_services > .img_services_bg{
+  max-width: 480px;
+  width: auto;
+  max-height: 400px;
+  height: auto;
   position: relative;
   margin-left: 50px;
 }
 
+.container__about_services > .img_services_bg > img{
+  width: 100%;
+  height: auto;
+}
+
 .img_services_bg > div {
   position: absolute;
-  top: 60px;
-  left: 40px;
+  top: 0;
+  left: 0;
   opacity: 1;
   transform: translateZ(-100px);
   scale: 0.9;
   rotate: 25deg;
-  width: 300px;
-  height: 300px;
+  max-width: 300px;
+  width: 100%;
+  max-height: 300px;
+  height: 100%;
   border-radius: 50%;
   background-color: #4aff7d;
   filter: blur(50px);
